# RDK-X5-Printer-Project

./: .gitignore  README.MD  README_cn.md
depth_navigation/: start_midas_alt.sh  start_midas_foxglove.sh
depth_navigation/config/: midas_nav_params.yaml  nav2_params.yaml
depth_navigation/models/: README.md
depth_navigation/rviz/: rviz.rviz
depth_navigation/src/: CMakeLists.txt  README.md  midas_depth_node.cpp  package.xml
depth_navigation/web_demo/: Makefile  index.html  start_web_demo.sh  web_demo.cpp
mobile_app/lib/: app.dart  main.dart
mobile_app/lib/agent/: agent_service.dart  models.dart
mobile_app/lib/agent/tools/: agent_tool.dart  file_status_tool.dart  list_files_tool.dart  list_locations_tool.dart  list_pending_files_tool.dart  remove_pending_files_tool.dart  submit_pending_files_tool.dart  update_file_priority_tool.dart
mobile_app/lib/audio/: audio_service.dart
mobile_app/lib/models/: file_utils.dart  job.dart  local_job.dart  location.dart  print_file.dart
mobile_app/lib/screens/: assistant_screen.dart  home_screen.dart  main_screen.dart  queue_screen.dart  status_screen.dart
mobile_app/lib/services/: api_service.dart  database_service.dart  job_store.dart  pending_file_store.dart  printer_state_service.dart  sse_service.dart
mobile_app/lib/src/rust/: frb_generated.dart
mobile_app/lib/theme/: app_theme.dart
mobile_app/lib/widgets/: file_preview.dart  location_bottom_sheet.dart  location_map_widget.dart
motor_controller/: .gitignore  Cargo.toml
motor_controller/src/: explorer.rs  lib.rs  main.rs  model.rs  ros_adoptor.rs
printer_backend/: .gitignore  Cargo.toml  check-print-queue.sh  clear-print-queue.sh  deploy.sh
printer_backend/src/: error.rs  main.rs  ros_nav.rs  static_files.rs
printer_backend/src/auth_server/: mod.rs
printer_backend/src/handlers/: file_status.rs  health.rs  job.rs  location.rs  map.rs  mod.rs  navigation.rs  printer_status.rs  sse.rs  upload.rs
printer_backend/src/middleware/: mod.rs
printer_backend/src/models/: app_config.rs  app_state.rs  job.rs  location.rs  map_data.rs  mod.rs  navigation_status.rs  printer_status.rs
printer_backend/src/scheduler/: background.rs  mod.rs  runner.rs  scheduler.rs
printer_backend/src/services/: file_service.rs  job_service.rs  mod.rs
printer_backend/static/: auth.html  index.html  style.css
printer_backend/static/js/: advanced.js  app.js  common.js  dashboard.js  map.js  print.js
