[package]
name = "ros_resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
aho-corasick = "1.1.3"
futures = "0.3.32"
postcard = { version = "1.1.3", features = ["use-std"] }
r2r = "0.9.5"
rclrs = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.52.1", features = ["full", "signal"] }
tokio-serial = "5.4.5"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
serde_json = "1"
base64 = "0.22"
[build-dependencies]
r2r = "0.9.5"
